fix(ci): build error
我和 GitHub 不共戴天！！！

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,8 @@
 name: Build
 
+permissions:
+  contents: Write
+
 on:
   push:
     branches: [ main ]
@@ -30,25 +33,9 @@ jobs:
     - name: Hexo build site
       run: npx hexo generate --force
 
-    - name: Upload artifacts for pages
-      uses: actions/upload-pages-artifact@v3
+    - name: Deploy to GitHub Pages
+      uses: peaceiris/actions-gh-pages@v4
       with:
-        path: public
-
-  deploy:
-    needs: build
-    if: startsWith(github.event.ref, 'refs/heads/')
-
-    permissions:
-      pages: write
-      id-token: write
-
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-
-    runs-on: ubuntu-latest
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./public
+        publish_branch: gh-pages
