--- a/_config.kratos-rebirth.yml
+++ b/_config.kratos-rebirth.yml
@@ -9,8 +9,8 @@ search:
 
 # 图片配置
 image:
-  favicon: "/assets/favicon.png" # 站点图标
-  #avatar: "/assets/logo.webp" # 个人信息挂件上的头像
+  favicon: "/assets/208010141.png" # 站点图标
+  avatar: "/assets/208010141.png" # 个人信息挂件上的头像
   banner:
     light: "https://dev.krt.moe/demo-assets/banner.webp"
     dark: "https://dev.krt.moe/demo-assets/banner_dark.webp"
