--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,10 @@ jobs:
         version: 9
         run_install: false
 
+    - name: Patch theme text
+      run: |
+        sed -i 's/自豪地使用 %s 主题/using var theme = new %s();' node_modules/hexo-theme-kratos-rebirth/languages/zh-CN.yml
+
     - name: Checkout repo
       uses: actions/checkout@v4
 
