fix(config):invalid website friend link
总算是挂上了，太折磨人了

--- a/_config.kratos-rebirth.yml
+++ b/_config.kratos-rebirth.yml
@@ -26,7 +26,7 @@ nav:
       url: /archives/
     - label: 友情链接
       icon: link
-      url: /website/friend
+      url: /posts/website/friend
     - label: 链接
       icon: link
       submenu:
