--- a/_config.kratos-rebirth.yml
+++ b/_config.kratos-rebirth.yml
@@ -128,4 +128,4 @@ visit_count:
 additional_injections:
   head: "" # 搜索引擎验证，或是追加的样式表
   footer: ""
-  after_footer: "<script src="/assets/scripts/counter.js"></script>"
+  after_footer: "<script src=\"/assets/scripts/counter.js\"></script>"
