--- a/_config.kratos-rebirth.yml
+++ b/_config.kratos-rebirth.yml
@@ -129,4 +129,6 @@ visit_count:
 additional_injections:
   head: "" # 搜索引擎验证，或是追加的样式表
   footer: ""
-  after_footer: "<script src=\"/assets/scripts/counter.js\"></script>"
+  after_footer: 
+  - "<script src=\"/assets/scripts/counter.js\"></script>"
+  - "<script src=\"/assets/scripts/RemoveBrokenStyle.js\"></script>"
